--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="dropdown-content">
       <a href="#aboutme_cv" class="dropbtn" onclick="openTab(event, 'About me')" >CV</a>
       <a href="#aboutme_academic" class="dropbtn" onclick="openTab(event, 'About me')" >Academic</a>
-      <a href="#aboutme_refresho" class="dropbtn" onclick="openTab(event, 'About me')" >Refresho</a>
+      <a href="#aboutme_refresho" class="dropbtn" onclick="openTab(event, 'About me')" >Academic+</a>
     </div>
   </div>
   <a href="#contact" class="dropbtn" onclick="openTab(event, 'Contact')">Contact</a>
@@ -64,12 +64,15 @@
     <img src="images/aboutme_1.jpg" style="float:right; padding:1em; max-width:32%;max-height:35%; border-radius: 20px;" class="wrap align-right">
   <h3>Welcome</h3>
   
-    <intro style="line-height:25px; font-size: 12pt"> 
-Hi! I am a Postdoctoral Research Associate in the Department of Astrophysical Sciences at Princeton University. Before moving here, I was a Postdoctoral Scholar in the Department of Astronomy and Astrophysics at the University of Chicago, Illinois. I completed my PhD as a prestigious Shyama Prasad Mukherjee (SPM) research fellow at the Indian Institute of Science and Raman Research Institute, Bengaluru India, under a Joint Astronomy Programme. 
-
+    <intro> <!-- style="line-height:25px; font-size: 12pt">  -->
+I am a Postdoctoral Research Associate in the Department of Astrophysical Sciences at Princeton University. I completed my PhD as a prestigious Shyama Prasad Mukherjee Research Fellow at the Indian Institute of Science and Raman Research Institute, Bengaluru, India, under a Joint Astronomy Programme. Before moving to Princeton, I was a Postdoctoral Scholar at the University of Chicago.
 
 </p>
 I specialize in theoretical astrophysical plasma physics, focusing on high-energy phenomena such as shocks, cosmic rays, and stellar feedback. My present research focuses on particle acceleration at collisionless shocks, kinetic plasma instabilities, and fluid modeling of cosmic rays. I use kinetic Particle-In-Cell and magnetohydrodynamic simulations, and analytic methods to study these problems.
+
+</p>
+
+My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="openTab(event, 'About me')">here</a>.
 </intro> 
 
 
@@ -78,7 +81,7 @@ I specialize in theoretical astrophysical plasma physics, focusing on high-energ
    <h3>Research highlights</h3>
    <div class="slideshow-container" style="max-width:100%; max-height:10%;">
       <div class="mySlides fade">
-        <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231213365G"> Return Currents in Collisionless Shocks</a>
+        <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231213365G"> Return Currents in Shocks</a>
         </intro>
       </div>
       <div class="mySlides fade">
@@ -172,7 +175,7 @@ I specialize in theoretical astrophysical plasma physics, focusing on high-energ
         <div class="timelinecontent">
          <b> December 2019 </b>
          <p>
-          I relocated to Chicago to take a role of a postdoctoral scholar in the <a href="https://astrophysics.uchicago.edu/">University of Chicago</a> until August 2023.
+          I relocated to Chicago to join postdoctoral scholar position at the <a href="https://astrophysics.uchicago.edu/">University of Chicago</a> until August 2023.
          </p>
         </div>
        </div>
@@ -231,7 +234,7 @@ I began my academic journey at National School, followed by primary education (c
 
     </div>
 
-  <h3> <a name="aboutme_refresho"></a> <font color="#e74c3c"> Non-Academic Journey! </font> </h3>
+  <h3> <a name="aboutme_refresho"></a> <font color="#e74c3c"> Academic+ Journey! </font> </h3>
   <intro>
   In free times, I like playing guitar, singing <a href="https://www.youtube.com/channel/UCqhixhebff53JdjAbigRUEQ">(youtube)</a>, and drawing. Here are some selected drawings attached below.
   </intro>
@@ -277,8 +280,8 @@ I began my academic journey at National School, followed by primary education (c
 
  <h3> <a name="research_summary"></a><font color="#e74c3c">Research summary</font> </h3>
   To know our contributions, click on the tabs below.
- </intro>
- 
+
+ </intro> 
  
     <button class="accordion" style="position:relative"> Electron acceleration at non-relativistic collisionless shocks </button>
 <div class="panel">
@@ -384,20 +387,14 @@ Ref.</br>
 1. Gupta, S. 2014, <a href="docs/SiddharthaMScThesis.pdf">MScThesis</a>, IIT Kharagpur.</p>
 </div>
 
-
  
  </p>
   
-  <h3> <a name="research_presentation"></a><font color="#e74c3c">Selected talks/posters</font> </h3>
-  Talks </br>
-  1. 26th June 2018 at the "<a href="https://crism2018.sciencesconf.org/">4th CRISM</a>" 
-     conference in Grenoble, France <a href="https://zenodo.org/record/1300389">(slides)</a> </br>
-  2. 13th June 2018 at the "<a href="http://www.rri.res.in/bubble/bubble.html">Bubble Big and small</a>" 
-     conference at IISc, Bangalore, India <a href="http://www.rri.res.in/bubble/talks/Gupta.pdf">(slides)</a></br>
-  </br>
-  Posters </br>
-  1. 9-13th May 2016 at the annual Meeting of Astronomical Society of India at Srinagar. <a href="docs/asi_radfb2016.pdf">ClickHereToSee</a>
-  
+  <h3> <a name="research_presentation"></a><font color="#e74c3c">Selected posters</font> </h3>
+  1. 9-13th May 2016 at the annual Meeting of Astronomical Society of India at Srinagar, India. <a href="docs/sgupta_ASI2016.pdf">[PDF]</a></br>
+  2. January 2018 in the Plasma Workshop at the Indian Institute of Science, Bangalore, India. <a href="docs/sgupta_IIsc2018.pdf">[PDF]</a></br>
+  3. 26 july - 3rd August 2023 at 38th International Cosmic Ray Conference, Nagoya, Japan. <a href="docs/sgupta_ICRC2023.pdf">[PDF]</a></br> 
+
   <h3><a name="research_publications"></a><font color="#e74c3c">Publications</font></h3>
   <a href="https://scholar.google.com/citations?user=JjIFsH4AAAAJ&hl=en"> 
     Google scholar
@@ -485,7 +482,7 @@ Ref.</br>
 
   <h3><font color="#e74c3c">Kinetic simulations</font> </h3>
    <ul>
-  <li> <h3 style="line-height:2px">TRISTAN (fortran90)</h3> </li>
+  <li> <h3 style="line-height:2px">Tristan-MP (fortran90)</h3> </li>
   <p style=" max-width:100%;"> It is a Particle-In-Cell code. The details can be found <a href="https://github.com/ntoles/tristan-mp-pitp">here</a>.</p>
   <li> <h3 style="line-height:2px">Konica (C, python interface)</h3> </li>
   <p style=" max-width:100%;"> Under construction.</p>
@@ -496,13 +493,13 @@ Ref.</br>
   <li> <h3 style="line-height:2px">fluid (C)</h3> </li>
   <p style=" max-width:100%;"> This is written by me for analyzing data files for the PLUTO and Shobdo codes. <a href="AA">Under construction</a>.</p>
   <li> <h3 style="line-height:2px">particles (python)</h3> </li>
-  <p style=" max-width:100%;"> For analyzing TRISTAN output <a href="AA">Under construction</a>.</p>
+  <p style=" max-width:100%;"> For analyzing output of Tristan-MP and Konica<a href="AA">Under construction</a>.</p>
    </ul>
 
   <h3><font color="#e74c3c">Visualizations</font> </h3>
   <ul>
  <li> <h3 style="line-height:2px">MYTH (python) </h3> </li>
-  <p style=" max-width:100%;"> MYTH is a multipurpose YT-rendering code especially designed to compile the <a href="https://yt-project.org/">yt-rendering</a>. For details, click here <a href="MYTH/myth.html">MYTH</a>.</p>
+  <p style=" max-width:100%;"> For Three-D visualization. MYTH is a multipurpose YT-rendering code especially designed to compile the <a href="https://yt-project.org/">yt-rendering</a>. For details, click here <a href="MYTH/myth.html">MYTH</a>.</p>
    </ul>
   
   <h3><font color="#e74c3c">C header files</font> </h3>
@@ -730,3 +727,4 @@ copyright@Siddhartha
 
 </body>
 </html>
+
