--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 I am a Postdoctoral Research Associate in the Department of Astrophysical Sciences at Princeton University. I completed my PhD as a prestigious Shyama Prasad Mukherjee Research Fellow at the Indian Institute of Science and Raman Research Institute, Bengaluru, India, under a Joint Astronomy Programme. Before moving to Princeton, I was a Postdoctoral Scholar at the University of Chicago.
 
 </p>
-I specialize in theoretical astrophysical plasma physics, focusing on high-energy phenomena such as shocks, cosmic rays, and stellar feedback. My present research focuses on particle acceleration at collisionless shocks, kinetic plasma instabilities, and fluid modeling of cosmic rays. I use kinetic Particle-In-Cell and magnetohydrodynamic simulations, and analytic methods to study these problems.
+My work revolves around theoretical astrophysical plasma physics. I study the physics behind high-energy phenomena, including the evolution of shocks, the acceleration of cosmic rays, and the feedback processes of stars. My present research focuses on particle acceleration at collisionless shocks, kinetic plasma instabilities, and fluid modeling of cosmic rays. I use kinetic Particle-In-Cell and magnetohydrodynamic simulations, and analytic methods to study these problems.
 
 </p>
 
@@ -106,7 +106,7 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
   <h3> <a name="CV"></a> <font color="#e74c3c">Curriculum vitae </font> </h3>
    <intro> 
    <ul>
-    <li><a href="docs/sguptaCV-2023.pdf">My CV (PDF)</a></li>
+    <li><a href="docs/sgupta_CV_May2024.pdf">My CV (PDF)</a></li>
   </ul>  
    </intro>
   
@@ -482,10 +482,10 @@ Ref.</br>
 
   <h3><font color="#e74c3c">Kinetic simulations</font> </h3>
    <ul>
+  <li> <h3 style="line-height:2px">SHAKTI (C, python interface)</h3> </li>
+  <p style=" max-width:100%;"> Under construction.</p>
   <li> <h3 style="line-height:2px">Tristan-MP (fortran90)</h3> </li>
   <p style=" max-width:100%;"> It is a Particle-In-Cell code. The details can be found <a href="https://github.com/ntoles/tristan-mp-pitp">here</a>.</p>
-  <li> <h3 style="line-height:2px">Konica (C, python interface)</h3> </li>
-  <p style=" max-width:100%;"> Under construction.</p>
    </ul>
 
   <h3><font color="#e74c3c">Analysis codes</font> </h3>
