--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ Ref.</br>
   <h3><font color="#e74c3c">Kinetic simulations</font> </h3>
    <ul>
   <li> <h3 style="line-height:2px">SHAKTI (C, python interface)</h3> </li>
-  <p style=" max-width:100%;"> Under construction.</p>
+  <p style=" max-width:100%;"> A user-friendly electromagnetic Particle-In-Cell code is currently being developed by me. Some test problems are provided in this <a href="SHAKTI/shakti.html"> link </a>.</p>
   <li> <h3 style="line-height:2px">Tristan-MP (fortran90)</h3> </li>
   <p style=" max-width:100%;"> It is a Particle-In-Cell code. The details can be found <a href="https://github.com/ntoles/tristan-mp-pitp">here</a>.</p>
    </ul>
@@ -493,7 +493,7 @@ Ref.</br>
   <li> <h3 style="line-height:2px">fluid (C)</h3> </li>
   <p style=" max-width:100%;"> This is written by me for analyzing data files for the PLUTO and Shobdo codes. <a href="AA">Under construction</a>.</p>
   <li> <h3 style="line-height:2px">particles (python)</h3> </li>
-  <p style=" max-width:100%;"> For analyzing output of Tristan-MP and Konica<a href="AA">Under construction</a>.</p>
+  <p style=" max-width:100%;"> For analyzing output of Tristan-MP and SHAKTI <a href="AA">Under construction</a>.</p>
    </ul>
 
   <h3><font color="#e74c3c">Visualizations</font> </h3>
