--- a/SHAKTI/shakti.html
+++ b/SHAKTI/shakti.html
@@ -131,11 +131,11 @@ html {
     </br>   
     <!-- <h3><a name="#Introduction"></a><font color="#e74c3c">Introduction</font></h3> -->
     <intro style="line-height:25px; font-size: 12pt">
-'Shakti' is a multidimensional electromagetic code that utilizes Particle-In-Cell method to study plasma. 'Shakti' -- a Sanskrit word that means strength or power -- symbolizes high-energy astrophysical phenomena. Its applications presently focus on a collisionless regime where charged particles interact collectively through the electromagnetic field instead of Coulomb interactions. Though the Coulomb interactions can be implemented.
+'Shakti' is a multidimensional electromagetic code that utilizes Particle-In-Cell method to study plasma. 'Shakti' -- a Sanskrit word that means strength or power -- symbolizes high-energy astrophysical phenomena. Its applications presently focus on a collisionless regime where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions. However, the Coulomb interactions can be implemented.
 </p>
-The current version of the Shakti code supports one and two dimensions in Cartesian geometry. The code is developed in a highly modular form, allowing user-friendly problem setup files. It supports multi-species, Maxwell-Boltzmann/Monoenergetic/power-law distribution, and higher-order shape functions. The code can be run on both single or multi processor(s) using commonly used compilers such as GCC or MPI. To explore sample test problems, click on "TestProblems".
+The current version of the Shakti code supports one and two dimensions in Cartesian geometry. The code is developed in a highly modular form, allowing user-friendly problem setup files. It supports multi-species, Maxwell-Boltzmann/Monoenergetic/power-law distribution, and higher-order shape functions. The code can be run on both single or multi-processor(s) using commonly used compilers such as GCC or MPI. To explore sample test problems, click on "TestProblems".
 </p>
-This code is currently in the development stage, with the aim of being released publicly soon.
+This code is currently in the development stage, intending to be released publicly soon.
 </intro> 
 
 
