--- a/SHAKTI/shakti.html
+++ b/SHAKTI/shakti.html
@@ -131,9 +131,9 @@ html {
     </br>   
     <!-- <h3><a name="#Introduction"></a><font color="#e74c3c">Introduction</font></h3> -->
     <intro style="line-height:25px; font-size: 12pt">
-'Shakti' is a multidimensional electromagetic code that utilizes Particle-In-Cell method to study plasma. 'Shakti' -- a Sanskrit word that means strength or power -- symbolizes high-energy astrophysical phenomena. Its applications presently focus on a collisionless regime where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions. However, the Coulomb interactions can be implemented.
+'Shakti' is a multidimensional electromagetic code that utilizes Particle-In-Cell (PIC) method to study plasma. The applications of the 'Shakti' PIC code currently focus to a collisionless regime where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions. However, the Coulomb interactions can be implemented.
 </p>
-The current version of the Shakti code supports one and two dimensions in Cartesian geometry. The code is developed in a highly modular form, allowing user-friendly problem setup files. It supports multi-species, Maxwell-Boltzmann/Monoenergetic/power-law distribution, and higher-order shape functions. The code can be run on both single or multi-processor(s) using commonly used compilers such as GCC or MPI. To explore sample test problems, click on "TestProblems".
+The current version of the Shakti code supports one and two dimensions in Cartesian geometry. The code is developed in a highly modular form, allowing user-friendly problem setup files. It supports multi-species, different distribution functions for each species (e.g., Maxwell-Boltzmann/Monoenergetic/power-law distribution), and higher-order shape functions. The code can be run on both single or multi-processor(s) using commonly used compilers such as gcc or mpicc Compiler. To explore sample test problems, click on "TestProblems".
 </p>
 This code is currently in the development stage, intending to be released publicly soon.
 </intro> 
@@ -145,22 +145,8 @@ This code is currently in the development stage, intending to be released public
   <!--================ TestProblems ===================== -->
   <div id="TestProblems" class="tabcontent" style="margin:2%;">
 
-  <!--
-  <h3><a name="testproblem_advection"></a><font color="#e74c3c">A. Advection</font></h3>
-  <intro> 
-    A.1. A one dimensional profile that contains a gaussian function and a step function, which are forced to 
-   advect with constant speed. The advection speed is set to 1 and boundaries are periodic. Profiles at various time shown below.
-    </intro> 
-   <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
-    <img src="images/advec.png" style="float:left; padding:1.em; max-width:70%;max-height:100%;" class="wrap align-left"> 
-   </div>
-    </br>   
-   
-  </br>
-  </br>
-  -->
 
-  <h3><a name="testproblem_hd"></a><font color="#e74c3c">A. Charge conservation</font></h3>
+  <h3><a name="testproblem_hd"></a><font color="#e74c3c">A. Checking Gauss's law</font></h3>
    <intro>
   <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
      <video width=50% controls loop>
@@ -184,7 +170,7 @@ This code is currently in the development stage, intending to be released public
 
   <h3><a name="testproblem_hd"></a><font color="#e74c3c">B Weibel Instability</font></h3>
    <intro>
-  Counter streaming electron-positron flow
+  Counter-streaming electron-positron flow
   <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
      <video width=50% controls loop>
       <source src="video/weibel.mp4"  type="video/mp4">
