--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 I am a Postdoctoral Research Associate in the Department of Astrophysical Sciences at Princeton University. I completed my PhD as a prestigious Shyama Prasad Mukherjee Research Fellow at the Indian Institute of Science and Raman Research Institute, Bengaluru, India, under a Joint Astronomy Programme. Before moving to Princeton, I was a Postdoctoral Scholar at the University of Chicago.
 
 </p>
-My work revolves around theoretical astrophysical plasma physics. I study the physics behind high-energy phenomena, including the evolution of shocks, the acceleration of cosmic rays, and the feedback processes of stars. My present research focuses on particle acceleration at collisionless shocks, kinetic plasma instabilities, and fluid modeling of cosmic rays. I use kinetic Particle-In-Cell and magnetohydrodynamic simulations, and analytic methods to study these problems.
-
+My work revolves around theoretical astrophysical plasma physics. I study the physics behind high-energy astrophysical phenomena, which include detailed studies of shocks, the acceleration of cosmic rays, and the feedback processes of stars. My present research focuses on particle acceleration at collisionless shocks, kinetic plasma instabilities, and fluid modeling of cosmic rays. I use kinetic Particle-In-Cell and magnetohydrodynamic simulations, and analytic methods to study these problems.
 </p>
 
 My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="openTab(event, 'About me')">here</a>.
@@ -106,7 +105,7 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
   <h3> <a name="CV"></a> <font color="#e74c3c">Curriculum vitae </font> </h3>
    <intro> 
    <ul>
-    <li><a href="docs/sgupta_CV_May2024.pdf">My CV (PDF)</a></li>
+    <li><a href="docs/sguptaCV-2024.pdf">My CV (PDF)</a></li>
   </ul>  
    </intro>
   
@@ -468,8 +467,8 @@ Ref.</br>
 
   <!--================== Code ================== -->
   <div id="Code" class="tabcontent" style="margin:2%;" >
-  <p>Until now, I have used the following codes in my research projects</p>
- 
+  <p> I am a developer of <a href="SHOBDO/shobdo.html">SHOBDO</a> (two-fluid hydro code) and <a href="SHAKTI/shakti.html">SHAKTI</a> (kinetic plasma code). I mostly use the following codes for my research projects.</p> 
+
  <h3><font color="#e74c3c">Magneto-hydrodynamic simulations</font> </h3>
   <ul>
   <li> <h3 style="line-height:2px">PLUTO (programming language C, python interface)</h3> </li>
@@ -492,7 +491,7 @@ Ref.</br>
    <ul>
   <li> <h3 style="line-height:2px">fluid (C)</h3> </li>
   <p style=" max-width:100%;"> This is written by me for analyzing data files for the PLUTO and Shobdo codes. <a href="AA">Under construction</a>.</p>
-  <li> <h3 style="line-height:2px">particles (python)</h3> </li>
+  <li> <h3 style="line-height:2px">Konica (python)</h3> </li>
   <p style=" max-width:100%;"> For analyzing output of Tristan-MP and SHAKTI <a href="AA">Under construction</a>.</p>
    </ul>
 
@@ -501,15 +500,7 @@ Ref.</br>
  <li> <h3 style="line-height:2px">MYTH (python) </h3> </li>
   <p style=" max-width:100%;"> For Three-D visualization. MYTH is a multipurpose YT-rendering code especially designed to compile the <a href="https://yt-project.org/">yt-rendering</a>. For details, click here <a href="MYTH/myth.html">MYTH</a>.</p>
    </ul>
-  
-  <h3><font color="#e74c3c">C header files</font> </h3>
-  It is always good to have your own header files.
-   <ul>
-  <li> <a href="codes/polyfit.h">polyfit.h</a> </li>
-  <li> <a href="codes/bezier.h">bezier.h</a> </li>
-  ... many more to be uploaded. For any clarification please write an email (see <a href="#contact" onclick="openTab(event, 'Contact')">Contact</a>).
-    </ul>
- 
+   
   </div>
   <!--=============================================== -->
   
@@ -727,4 +718,3 @@ copyright@Siddhartha
 
 </body>
 </html>
-
