--- a/SHAKTI/shakti.html
+++ b/SHAKTI/shakti.html
@@ -125,19 +125,30 @@ html {
     <img src="images/cover.png" style="float:left; padding:0.1em; max-width:90%;max-height:100%;" class="wrap align-left">
     <div class="text" style="float: right; padding:0.1em; font-size:12.5px" > 
    The production of out-of-plane magnetic field due to counter-streaming electron-positron pair plasma. The result is obtained from the Shakti code.
-   Grid distribution is 200x200, with two particles per cell per species and a second-order shape function for particles.
+   Grid distribution is 200x200, with two particles per cell per species and using a second-order shape function for each particle.
 </div> 
  </div>
     </br>   
     <!-- <h3><a name="#Introduction"></a><font color="#e74c3c">Introduction</font></h3> -->
     <intro style="line-height:25px; font-size: 12pt">
-'Shakti' is a multidimensional electromagetic code that utilizes Particle-In-Cell (PIC) method to study plasma. The applications of the 'Shakti' PIC code currently focus to a collisionless regime where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions. However, the Coulomb interactions can be implemented.
+'Shakti' is a multidimensional electromagetic code that utilizes Particle-In-Cell (PIC) method to study plasma. The current application focus is collisionless regime, where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions. The Coulomb interactions can be implemented.
 </p>
-The current version of the Shakti code supports one and two dimensions in Cartesian geometry. The code is developed in a highly modular form, allowing user-friendly problem setup files. It supports multi-species, different distribution functions for each species (e.g., Maxwell-Boltzmann/Monoenergetic/power-law distribution), and higher-order shape functions. The code can be run on both single or multi-processor(s) using commonly used compilers such as gcc or mpicc Compiler. To explore sample test problems, click on "TestProblems".
+
+The current version of the Shakti code supports one and two dimensions in Cartesian geometry. The code is designed to support three-dimensional configurations and different geometries. The Shakti code is highly modular, allowing user-friendly problem setup files. It supports multi-species, different distribution functions for each species (e.g., Maxwell-Boltzmann/Monoenergetic/power-law distribution), and higher-order shape functions. The code can be run on both single or multi-processor(s) using commonly used compilers such as gcc or mpicc Compiler. To explore sample test problems, click on "TestProblems".
 </p>
-This code is currently in the development stage, intending to be released publicly soon.
+This code is currently in the development stage, with the aim of being released publicly soon.
 </intro> 
 
+
+</br>
+</p>
+<!--Shakti was mainly developed for this work -
+ddGupta et al. (2018) MNRAS, 473, 1537; <a href="http://adsabs.harvard.edu/abs/2017arXiv170510448G">[NASA/ADS]</a>; <a href="https://doi.org/10.1093/mnras/stx2427"></a>; <a href="a">arXiv</a> -->
+</br>
+
+
+   
+   
 
   </div>
   <!--=============================================== -->
@@ -145,8 +156,7 @@ This code is currently in the development stage, intending to be released public
   <!--================ TestProblems ===================== -->
   <div id="TestProblems" class="tabcontent" style="margin:2%;">
 
-
-  <h3><a name="testproblem_hd"></a><font color="#e74c3c">A. Checking Gauss's law</font></h3>
+  <h3><a name="testproblem_hd"></a><font color="#e74c3c">A. Charge conservation</font></h3>
    <intro>
   <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
      <video width=50% controls loop>
@@ -157,8 +167,8 @@ This code is currently in the development stage, intending to be released public
   </intro>
 
 
-  <h3><a name="testproblem_hd"></a><font color="#e74c3c">A. Plasma Oscillation</font></h3>
-   <intro>
+  <h3><a name="testproblem_hd"></a><font color="#e74c3c">B. Plasma Oscillation</font></h3> 
+  <intro>
   Oscillation of electrons in electron-proton plasma 
   <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
      <video width=50% controls loop>
@@ -168,20 +178,42 @@ This code is currently in the development stage, intending to be released public
    </br> 
   </intro>
 
-  <h3><a name="testproblem_hd"></a><font color="#e74c3c">B Weibel Instability</font></h3>
+  <h3><a name="testproblem_hd"></a><font color="#e74c3c">C. Weibel Instability</font></h3>
    <intro>
-  Counter-streaming electron-positron flow
+  Counter streaming beams made of electron-positrons (in-plane flow)
   <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
      <video width=50% controls loop>
-      <source src="video/weibel.mp4"  type="video/mp4">
+      <source src="video/weibel_x.mp4"  type="video/mp4">
+    </video>     
+  </div>
+   </br>
+  </intro>
+   <intro>
+  Counter streaming beams made of electron-positrons (out-of-plane flow)
+  <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
+     <video width=50% controls loop>
+      <source src="video/weibel_z.mp4"  type="video/mp4">
     </video>     
   </div>
    </br>
   </intro>
 
-  <h3><a name="testproblem_hd"></a><font color="#e74c3c">C. Nonresonant streaming instability</font></h3>
+
+  <h3><a name="testproblem_hd"></a><font color="#e74c3c">D. Twostream instability</font></h3>
   <intro>
-  Super-Alfvenic drift of relativistic particles in electron-proton plasmas
+  Counterstreaming two beams made of electron-positron pair
+  <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
+     <video width=50% controls loop>
+      <source src="video/twostream.mp4"  type="video/mp4">
+    </video>
+  </div>
+   </br>
+  </intro>
+
+
+  <h3><a name="testproblem_hd"></a><font color="#e74c3c">E. Nonresonant streaming instability</font></h3>
+  <intro>
+  Super-Alfvenic drift of relativistic particles in electron-proton plasmas (three species problem)
   <div class="slideshow-container" style="float: right; padding:1em; max-width:100%;max-height:50%;">
      <video width=50% controls loop>
       <source src="video/nrsi.mp4"  type="video/mp4">
@@ -189,6 +221,9 @@ This code is currently in the development stage, intending to be released public
   </div>
    </br>
   </intro>
+
+
+
 
   </div>
   <!--=============================================== -->
