--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <h3>Welcome</h3>
   
     <intro> <!-- style="line-height:25px; font-size: 12pt">  -->
-I am a Postdoctoral Research Associate in the Department of Astrophysical Sciences at Princeton University. I completed my PhD as a prestigious Shyama Prasad Mukherjee Research Fellow at the Indian Institute of Science and Raman Research Institute, Bengaluru, India, under a Joint Astronomy Programme. Before moving to Princeton, I was a Postdoctoral Scholar at the University of Chicago.
+I am an Associate Research Scholar in the Department of Astrophysical Sciences at Princeton University. I completed my PhD as a prestigious Shyama Prasad Mukherjee Research Fellow at the Indian Institute of Science and Raman Research Institute, Bengaluru, India, under a Joint Astronomy Programme. Before moving to Princeton, I was a Postdoctoral Scholar at the University of Chicago.
 
 </p>
 My work revolves around theoretical astrophysical plasma physics. I study the physics behind high-energy astrophysical phenomena, which include detailed studies of shocks, the acceleration of cosmic rays, and the feedback processes of stars. My present research focuses on particle acceleration at collisionless shocks, kinetic plasma instabilities, and fluid modeling of cosmic rays. I use kinetic Particle-In-Cell and magnetohydrodynamic simulations, and analytic methods to study these problems.
@@ -105,7 +105,7 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
   <h3> <a name="CV"></a> <font color="#e74c3c">Curriculum vitae </font> </h3>
    <intro> 
    <ul>
-    <li><a href="docs/sguptaCV-2024.pdf">My CV (PDF)</a></li>
+    <li><a href="docs/sgupta_CV-4page-2024.pdf">My CV (PDF)</a></li>
   </ul>  
    </intro>
   
@@ -174,7 +174,7 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
         <div class="timelinecontent">
          <b> December 2019 </b>
          <p>
-          I relocated to Chicago to join postdoctoral scholar position at the <a href="https://astrophysics.uchicago.edu/">University of Chicago</a> until August 2023.
+          I relocated to Chicago to join a postdoctoral scholar position at the <a href="https://astrophysics.uchicago.edu/">University of Chicago</a> until August 2023.
          </p>
         </div>
        </div>
@@ -185,7 +185,7 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
          <p>
        I moved to Bengaluru to join my PhD graduate school at the Indian Institute of Science 
       (<a href="http://www.iiscnet.in/">IISc</a>), Bengaluru. 
-      I was enrolled under the Joint Astronomy Programme 
+      I was enrolled in the Joint Astronomy Programme 
       (<a href= "http://www.physics.iisc.ernet.in/%7Ejap/">JAP</a>) 
       as a prestigious Shyama Prasad Mukherjee (SPM) research fellow. 
       As a graduate student in the JAP, I worked with Prof. Biman Nath at Raman Research Institute (<a href="http://www.rri.res.in/">RRI</a>) 
