--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
    <div class="slideshow-container" style="max-width:100%; max-height:10%;">
       <div class="mySlides fade">
         <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231213365G"> Return Currents in Shocks</a>. 
-         Featured on <a href="https://youtu.be/OEdYnshvKPQ"> American Astronomical Society Journal Author Series YouTube </a>.
+         Featured in American Astronomical Society Journal Author Series <a href="https://youtu.be/OEdYnshvKPQ">YouTube</a>.
         </intro>
       </div>
       <div class="mySlides fade">
