--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
    </br></br>
    <h3>Research highlights</h3>
    <div class="slideshow-container" style="max-width:100%; max-height:10%;">
+        <div class="mySlides fade">
+        <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...976...10G/abstract"> Electron Acceleration at Quasi-parallel Nonrelativistic Shocks: A 1D Kinetic Survey </a>.
+        </intro>
+      </div>
       <div class="mySlides fade">
         <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231213365G"> Return Currents in Shocks</a>. 
          Featured in American Astronomical Society Journal Author Series <a href="https://youtu.be/OEdYnshvKPQ">YouTube</a>.
@@ -290,6 +294,10 @@ I began my academic journey at National School, followed by primary education (c
 </br>
 Ref.</br> 
 1. Gupta et al (2023); <a href="https://doi.org/10.22323/1.444.0396">[NASA/ADS]</a>; <a href="https://doi.org/10.22323/1.444.0396">ICRC 2023 proceeding</a>; <a href="https://doi.org/10.22323/1.444.0396">arXiv</a> 
+</br> 
+2. Gupta et al (2024a); <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...968...17G/abstract">[NASA/ADS]</a>; <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...968...17G/abstract">ApJ 2024</a>; <a href="https://doi.org/10.22323/1.444.0396">arXiv</a> 
+</br> 
+3. Gupta et al (2024b); <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...976...10G/abstract">[NASA/ADS]</a>; <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...976...10G/abstract">ApJ 2024</a>; <a href="https://doi.org/10.22323/1.444.0396">arXiv</a> 
 </div>
 
 
