--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
    </br></br>
    <h3>Research highlights</h3>
    <div class="slideshow-container" style="max-width:100%; max-height:10%;">
+<div class="mySlides fade">
+        <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250609134G/abstract"> Speed-dependent Threshold for Electron Injection into Diffusive Shock Acceleration </a>.
+        </intro>
+      </div>
         <div class="mySlides fade">
         <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...976...10G/abstract"> Electron Acceleration at Quasi-parallel Nonrelativistic Shocks: A 1D Kinetic Survey </a>.
         </intro>
@@ -110,7 +114,7 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
   <h3> <a name="CV"></a> <font color="#e74c3c">Curriculum vitae </font> </h3>
    <intro> 
    <ul>
-    <li><a href="docs/sgupta_CV-4page-2024.pdf">My CV (PDF)</a></li>
+    <li><a href="docs/sguptaCV_25.pdf">My CV (PDF)</a></li>
   </ul>  
    </intro>
   
@@ -203,12 +207,12 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
         <div class="timelinecontent">
          <b> August 2012 </b>
          <p>
-     Pursuing Master of Science (MSc) in the dept of Physics at Indian Institute
+     Pursuing Master of Science (MSc) in the dept of Physics at the Indian Institute
      of Technology Kharagpur (<a href="http://iitkgp.ac.in/">IIT Kgp</a>) was
-     the most important time in my academic carrier. During a one-year long project
+     the most important time in my academic career. During a one-year-long project
      with Prof. Sayan Kar, I decided to take theoretical astrophysics
      as a broad area of research. I completed MSc in 2014 with a first
-     rank in the physics dept, and left IIT kgp to explore my area of interest.
+     rank in the physics department, and left IIT Kgp to explore my area of interest.
          </p>
         </div>
        </div>
@@ -228,7 +232,7 @@ I developed a passion for Physical Science and Mathematics during my school year
          <b> 2009 and before </b>
          <p>
 
-I began my academic journey at National School, followed by primary education (class I to IV) at Burdwan Church Missionary Society High School (<a href="http://www.burdwancms.in/">CMS</a>). Subsequently, I completed higher secondary at Burdwan Municipal High School (<a href="http://www.bmhschool.com">BMHS</a>).
+I began my academic journey at National School, followed by primary education (classes I to IV) at Burdwan Church Missionary Society High School (<a href="http://www.burdwancms.in/">CMS</a>). Subsequently, I completed higher secondary at Burdwan Municipal High School (<a href="http://www.bmhschool.com">BMHS</a>).
 
          </p>
         </div>
