--- a/SHAKTI/shakti.html
+++ b/SHAKTI/shakti.html
@@ -131,12 +131,20 @@ html {
     </br>   
     <!-- <h3><a name="#Introduction"></a><font color="#e74c3c">Introduction</font></h3> -->
     <intro style="line-height:25px; font-size: 12pt">
-'Shakti' is a multidimensional electromagetic code that utilizes Particle-In-Cell (PIC) method to study plasma. The current application focus is collisionless regime, where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions. The Coulomb interactions can be implemented.
+'Shakti' is a multidimensional electromagnetic code that utilizes the Particle-In-Cell (PIC) method to study plasmas. The current application focus is on the collisionless regime, where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions. The Coulomb interactions can be implemented.
 </p>
 
-The current version of the Shakti code supports one and two dimensions in Cartesian geometry. The code is designed to support three-dimensional configurations and different geometries. The Shakti code is highly modular, allowing user-friendly problem setup files. It supports multi-species, different distribution functions for each species (e.g., Maxwell-Boltzmann/Monoenergetic/power-law distribution), and higher-order shape functions. The code can be run on both single or multi-processor(s) using commonly used compilers such as gcc or mpicc Compiler. To explore sample test problems, click on "TestProblems".
+</b>
+Why a new code?
 </p>
-This code is currently in the development stage, with the aim of being released publicly soon.
+The PIC methods have diverse applications. However, despite decades of effort, many available codes remain difficult to use. The challenges include:
+1) limited adaptability for user-defined modules, 2) inflexible simulation environment for setting up new problems, and 3) poor documentation.
+The Shakti code addresses these challenges by providing a modular, multidimensional, and user-friendly framework.
+</p>
+Originally begun as a self-tutorial project, Shakti has now evolved into a robust numerical tool.
+The current version of the Shakti code supports one, two, and three dimensions in Cartesian geometry and is extensible to support different geometries. The Shakti code is highly modular, supports multi-species, different distribution functions for each species (e.g., Maxwell-Boltzmann/Monoenergetic/power-law distribution), and higher-order shape functions. The code can be run on both single and multi-processors using commonly used compilers such as gcc or mpicc. To explore sample test problems, click on "TestProblems".
+</p>
+This code is currently in the development stage, to be released publicly soon.
 </intro> 
 
 
