--- a/SHAKTI/shakti.html
+++ b/SHAKTI/shakti.html
@@ -143,8 +143,12 @@ The PIC methods have diverse applications. However, despite decades of effort, m
 The Shakti code addresses these challenges by providing a modular, multidimensional, and user-friendly framework.
 </p>
 Originally begun as a self-tutorial project, Shakti has now evolved into a robust numerical tool.
-The current version of the Shakti code supports one, two, and three dimensions in Cartesian geometry and is extensible to support different geometries. The Shakti code is highly modular, supports multi-species, different distribution functions for each species (e.g., Maxwell-Boltzmann/Monoenergetic/power-law distribution), and higher-order shape functions. The code can be run on both single and multi-processors using commonly used compilers such as gcc or mpicc. While the current application focus is on the collisionless regime, where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions, the Coulomb interactions can be implemented. To explore sample test problems, click on "TestProblems".
+The current version of the Shakti code supports one, two, and three dimensions in Cartesian geometry and is extensible to support different geometries. 
 </p>
+</b>
+The Shakti code is highly modular, supports multi-species, different distribution functions for each species (e.g., Maxwell-Boltzmann/Monoenergetic/power-law distribution), and higher-order shape functions. The code can be run on both single and multi-processors using commonly used compilers such as gcc or mpicc. While the current application focus is on the collisionless regime, where charged particles interact collectively through the electromagnetic field, instead of Coulomb interactions, the Coulomb interactions can be implemented. To explore sample test problems, click on "TestProblems".
+
+</b>
 This code is currently in the development stage, to be released publicly soon.
 </intro> 
 
