--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ My Curriculum vitae is available <a href="#aboutme_cv" class="dropbtn" onclick="
         </intro>
       </div>
         <div class="mySlides fade">
-        <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...976...10G/abstract"> Electron Acceleration at Quasi-parallel Nonrelativistic Shocks: A 1D Kinetic Survey </a>.
+        <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...976...10G/abstract"> Electron Acceleration at Quasi-parallel Nonrelativistic Shocks: A 1D Kinetic Survey </a>
         </intro>
       </div>
       <div class="mySlides fade">
-        <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231213365G"> Return Currents in Shocks</a>. 
-         Featured in American Astronomical Society Journal Author Series <a href="https://youtu.be/OEdYnshvKPQ">YouTube</a>.
+        <intro> My recent papers: <a href="https://ui.adsabs.harvard.edu/abs/2023arXiv231213365G"> Return Currents in Shocks</a> 
+         Featured in American Astronomical Society Journal Author Series <a href="https://youtu.be/OEdYnshvKPQ">YouTube</a>
         </intro>
       </div>
       <div class="mySlides fade">
